Fixed UI spacing, fixed timestamps, get the migration years by the possibilities in csv.

--- a/client/alpine-swift-application/src/App.css
+++ b/client/alpine-swift-application/src/App.css
@@ -56,7 +56,8 @@
 }
 
 .site-layout .site-layout-background {
-  height: 450px;
+  height: "20%";
+  width: "40%";
   margin: 25px;
   background: #fff;
 }
